fix: text overflow and add hover effects

--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,11 @@
   --navbar: #E9ECEF;
   --sidebar: #F8F9FA;
   --sidebar-selected: #349CB9;
+  --sidebar-selected-hover: #3195b1;
   --primary-text: #000000;
   --secondary-text: #797979;
   --secondary-icon: #B7B7B7;
+  --task-hover: #f1f2f3;
 }
 
 * {
@@ -84,13 +86,31 @@ nav {
   padding: 12px;
 }
 
+.side-bar-btn:hover {
+  background-color: #E9ECEF;
+}
+
 .side-bar-select {
   background-color: var(--sidebar-selected);
+}
+
+.side-bar-select:hover {
+  background-color: var(--sidebar-selected-hover);
 }
 
 .side-bar-btn h3 {
   font-size: 16px;
   font-weight: 400;
+}
+
+.add-btn {
+  border: none;
+  justify-content: center;
+  color: var(--secondary-text);
+}
+
+.add-project {
+  background-color: var(--sidebar);
 }
 
 /* Main Content */
@@ -99,6 +119,7 @@ nav {
   flex-direction: column;
   align-items: center;
   flex: 1;
+  min-width: 36rem;
 }
 
 .main-content {
@@ -132,9 +153,14 @@ nav {
   padding: 8px 12px;
 }
 
+.task-card:hover,
+.add-task:hover {
+  background-color: var(--task-hover);
+}
+
 .task-info-left {
   display: flex;
-  flex: 1;
+  flex: 1 1 0;
   min-width: 0;
   align-items: center;
   gap: 12px;
@@ -148,7 +174,8 @@ nav {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  flex: 1;
+  flex: 1 1 0;
+  min-width: 0;
 }
 
 .task-info-left p,
@@ -179,4 +206,22 @@ nav {
   padding: 2px;
   border-radius: 8px;
   text-align: center;
+}
+
+.add-task {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px 12px;
+  background-color: white;
+  border: none;
+}
+
+.add-task h3 {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.add-icon {
+  width: 20px;
 }
